# lead-targeting

./: .gitignore  Makefile  README.md  ROADMAP.md  app.py  pyproject.toml
src/: config.py
src/data/: feed-structured-db.py  feed-vector-db.py  get-data.py  models.py
