[project]
name = "lead-targeting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.3.0",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=3.4.1",
    "sqlmodel>=0.0.24",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.9.10",
]
